# lazyslide-workshop-scverse-conference-2025

./: .gitignore  README.md  pyproject.toml
